tgthrProgramManagement/force-app/main/default/objects/Program/fields/Housing_Program__c.field-meta.xml
<CustomField>
    <fullName>Housing_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Program</label>
    <type>Checkbox</type>
</CustomField>