tgthrProgramManagement/force-app/main/default/objects/Program/fields/Intake_Template__c.field-meta.xml
<CustomField>
    <fullName>Intake_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Interview template used when launching intake from this Program.</description>
    <inlineHelpText>Select the interview template that should launch for new intakes in this Program. The active template version will be resolved at runtime.</inlineHelpText>
    <label>Intake Template</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>