tgthrProgramManagement/force-app/main/default/objects/Program/fields/Program_Director__c.field-meta.xml
<CustomField>
    <fullName>Program_Director__c</fullName>
    <label>Program Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Director</relationshipName>
    <type>Lookup</type>
</CustomField>